<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable name="gameViewModel"
                  type="com.example.wordmaster.screens.game.GameViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <!--android:text="@{gameViewModel.timeString}"-->
        <TextView
                android:text="@{gameViewModel.timeString}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/timer_text"
                style="@style/text_reg_style"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/guideline1"/>

        <androidx.constraintlayout.widget.Guideline
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintGuide_percent="0.2"
                android:id="@+id/guideline1"/>

        <TextView
                android:text="@string/the_word_is"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/word_label"
                style="@style/text_reg_style"
                app:layout_constraintTop_toBottomOf="@id/guideline1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/word_text"/>
        <!-- android:text="@{@string/quote_format(gameViewModel.word)}"-->
        <TextView
                android:text="@{gameViewModel.word}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/word_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/layout_margin"
                app:layout_constraintTop_toBottomOf="@+id/word_label"
                app:layout_constraintBottom_toBottomOf="@id/guideline2"
                android:fontFamily="@font/roboto" android:textStyle="bold"
                android:textSize="@dimen/text_big_size"/>

        <androidx.constraintlayout.widget.Guideline
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintGuide_percent="0.4"
                android:id="@+id/guideline2"/>

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/synonym"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/synonym_input"
                style="@style/text_reg_style"
                android:layout_marginTop="@dimen/layout_margin"
                app:layout_constraintTop_toBottomOf="@+id/guideline2"
                app:layout_constraintBottom_toTopOf="@+id/synonym_text"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/synonym_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/layout_margin"
                app:layout_constraintTop_toBottomOf="@+id/synonym_input"
                style="@style/text_reg_style"
                app:layout_constraintBottom_toBottomOf="@id/guideline3" android:visibility="gone"/>

        <androidx.constraintlayout.widget.Guideline
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:layout_constraintGuide_begin="125dp"
                app:layout_constraintGuide_percent="0.6"
                android:id="@+id/guideline3"/>

        <TextView
                android:text="@string/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/score_label"
                style="@style/text_reg_style"
                android:layout_marginTop="@dimen/layout_margin_big"
                app:layout_constraintTop_toBottomOf="@id/guideline3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="@id/vertical_guideline"
                app:layout_constraintBottom_toTopOf="@id/guideline4"
                app:layout_constraintBaseline_toBaselineOf="@+id/score_text"/>
        <!--android:text="@{@string/score_format(gameViewModel.score)}"-->
        <TextView
                android:text="@{String.valueOf(gameViewModel.score)}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/score_text"
                style="@style/text_reg_style"
                android:layout_marginTop="@dimen/layout_margin_big"
                app:layout_constraintTop_toBottomOf="@id/guideline3"
                app:layout_constraintStart_toStartOf="@id/vertical_guideline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/guideline4"
        />

        <androidx.constraintlayout.widget.Guideline
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:layout_constraintGuide_begin="125dp"
                app:layout_constraintGuide_percent="0.8"
                android:id="@+id/guideline4"/>


        <Button
                android:text="@string/skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/skip_button"
                android:onClick="@{() -> gameViewModel.onSkip()}"
                style="@style/button_style"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/gotit_button"
                app:layout_constraintBaseline_toBaselineOf="@+id/gotit_button"/>
        <Button
                android:text="@string/got_it"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/gotit_button"
                style="@style/button_style"
                android:onClick="@{() -> gameViewModel.onCorrect()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/skip_button"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="@dimen/layout_margin"
        />



        <androidx.constraintlayout.widget.Guideline
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintGuide_percent="0.5"
                android:id="@+id/vertical_guideline"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>